--- a/todo.txt
+++ b/todo.txt
@@ -7,10 +7,9 @@
 - Lepsza optymalizacja widgetów**
 - Przetestowanie widgetu nadchodzących meczy (na prawidłowych, pełnych danych)
 - Przetestowanie widgetu sliderowego
-- Menu bar front-top z takimi pozycjami jak: strona główna, forum, poradniki, obstawianie, video (możliwe, że o czymś zapomniałem)
+- Menu bar front-top z takimi pozycjami jak: strona główna, forum, poradniki, obstawianie, video (możliwe, że o czymś zapomniałem) ## MG ##
 - Deafultowe logo newsów w sliderze ## MG ##
 - Poradniki video + tekst do CS'a* ## MG ##
-- Pomysły na serie artykułów* (obok zwyczajnych newsów) ## MG ##
 - Format układanych newsów pod sliderem, do wymyślenia i wdrożenia
 - Galeria najlepiej ocenianych/najczęściej wyświetlanych filmików z różnych kategorii (poradniki/frag movie etc.) po prawej stronie
 - Implementacja systemu podliczania punktów w obstawianiu przez użytkowników serwisu (czyli, Sławek obstawia sobie wyniki meczów w specjalnym//
